# MLCodingChallenge

./: .gitignore  README.md
libs/image-data-handler/: README.md  pyproject.toml
libs/image-data-handler/src/imagedatahandler/: padding_removal.py
libs/image-data-handler/tests/: test_padding_removal.py
projects/image-classification/: README.md  pyproject.toml
tech-assessment-ai-engineer/: README.md
