[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "imagedatahandler"
version = "0.0.1"
description = "Library for image data manipulation"
readme = "README.md"
authors = ["Balazs Horvath <horvathbolii@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^1.22"
opencv_python = "^4.8.0.76"