[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "glaucomaclassifier"
description = "A mini-project for glaucoma classification using machine learning."
version = "0.1.0"
authors = ["Balazs Horvath <horvathbolii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.1.0%2Bcu121-cp311-cp311-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.16.0%2Bcu121-cp311-cp311-linux_x86_64.whl" }
numpy = "^1.22"
pandas = "^1.4.0"
opencv_python = "^4.8.0.76"
matplotlib = "^3.8.1"
scikit-learn = "^1.3.2"
imagedatahandler = { path = "../../libs/image-data-handler", develop = true }


[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.3.0"
isort = "^5.10.1"

